<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:fontFamily="@font/poppin_medium"
        android:padding="16dp"
        android:text="@string/skip"
        android:textColor="#9E9E9E"
        android:textSize="14sp" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:id="@+id/indicatorLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:orientation="horizontal" />

    <RelativeLayout
        android:id="@+id/rl_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/_20sdp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_reg1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/by_continuing_you_agree_to_the"
            android:textColor="#121212"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvPrivacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="22dp"
            android:layout_toRightOf="@+id/tv_reg1"
            android:background="?attr/selectableItemBackground"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="@string/privacy_policy"
            android:textColor="#121212"
            android:textSize="12sp" />

    </RelativeLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/ivContinue"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:background="@drawable/blue_rounded_corner"
        android:fontFamily="@font/poppin_medium"
        android:text="@string/continues"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        android:visibility="gone" />

</LinearLayout>
