<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_15sdp"
        app:cardBackgroundColor="@color/dialog_bg_color"
        app:cardCornerRadius="@dimen/_20sdp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_15sdp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvAddProfile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
             
                android:gravity="center"
                android:text="@string/add_profile"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/llInputBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_5sdp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:background="@drawable/top_bottom_rounded_corner3"
                android:backgroundTint="@color/white"
                android:gravity="center"
                android:padding="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvAddProfile">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_user" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etProfileName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_5sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
             
                    android:hint="@string/enter_your_name"
                    android:includeFontPadding="false"
                    android:inputType="textCapSentences"
                    android:maxEms="20"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="#66000000"
                    android:textSize="@dimen/_13sdp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvCounter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0.4"
                    android:background="@android:color/transparent"
                    android:includeFontPadding="false"
                    android:inputType="textCapSentences"
                    android:singleLine="true"
                    android:text="0/20"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:padding="@dimen/_3sdp"
                    android:src="@drawable/ic_cancel"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/llInputBox">

                <TextView
                    android:id="@+id/btnCancel"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:alpha="0.4"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:text="@string/cancel"
                    android:textColor="@color/app_text_color"
                    android:textSize="@dimen/_13sdp" />

                <TextView
                    android:id="@+id/btnAdd"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:background="@drawable/top_bottom_rounded_corder2"
                    android:backgroundTint="@color/color_accent"
                 
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:paddingVertical="@dimen/_10sdp"
                    android:paddingTop="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_10sdp"
                    android:text="@string/add"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13sdp" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
