<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/dialog_bg_color"
        app:cardCornerRadius="@dimen/_20sdp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="@dimen/_15sdp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvAddProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins_semi_bold"
                android:gravity="start"
                android:paddingHorizontal="@dimen/_15sdp"
                android:text="@string/exit"
                android:textColor="@color/text_color"
                android:textSize="@dimen/_14sdp" />

            <LinearLayout
                android:id="@+id/llInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/_5sdp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvCounter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:ellipsize="end"
                    android:fontFamily="@font/poppin_medium"
                    android:gravity="start"
                    android:includeFontPadding="false"
                    android:inputType="textCapSentences"
                    android:lines="2"
                    android:paddingHorizontal="@dimen/_15sdp"
                    android:text="@string/are_you_sure_to_want_to_exit"
                    android:textColor="@color/text_color_light"
                    android:textSize="@dimen/_11sdp" />
            </LinearLayout>


            <FrameLayout
                android:id="@+id/bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <com.facebook.shimmer.ShimmerFrameLayout
                    android:id="@+id/shimmer_layout_exit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_card_ads"
                    app:shimmer_auto_start="true"
                    app:shimmer_base_color="#ccc">

                    <include layout="@layout/ad_unifiled_regular" />

                </com.facebook.shimmer.ShimmerFrameLayout>

                <FrameLayout
                    android:id="@+id/ad_container_exit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom" />

            </FrameLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/_15sdp"
                android:weightSum="3">

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_button_cancel"
                    android:fontFamily="@font/poppin_medium"
                    android:padding="10dp"
                    android:text="Cancel"
                    android:textColor="#ffffff"
                    android:textSize="14sp"
                    android:visibility="invisible" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnCancel"
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_button_cancel"
                    android:text="@string/cancel"
                    android:textAllCaps="false"
                    android:textColor="#AAAAAA"
                    android:textSize="12sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnexit"
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_button"
                    android:text="@string/exit"
                    android:textAllCaps="false"
                    android:textColor="#ffffff"
                    android:textSize="12sp" />
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>
