<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/llAds"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llTopBar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_15sdp"
            android:paddingLeft="@dimen/_15sdp"
            android:paddingRight="@dimen/_15sdp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10sdp"
                android:paddingVertical="@dimen/_3sdp"
                android:paddingTop="@dimen/_3sdp"
                android:paddingEnd="@dimen/_3sdp"
                android:paddingBottom="@dimen/_3sdp"
                android:src="@drawable/ic_back" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTitle"
                style="@style/textTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:fontFamily="@font/poppins_semi_bold" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <LinearLayout
            android:id="@+id/ll_main"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingVertical="@dimen/_10sdp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_add_account" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/textTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/poppin_medium"
                android:gravity="center_horizontal"
                android:includeFontPadding="false"
                android:text="@string/login_into_multiple_accounts"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/textTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center_horizontal"
                android:includeFontPadding="false"
                android:text="@string/str_account"
                android:textColor="@color/text_color_light"
                android:textSize="@dimen/_9sdp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llData"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.4"
            android:background="@color/white"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvLoginData"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:paddingBottom="@dimen/_70sdp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/btnAdd"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:background="@drawable/btn_blue"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/llAds"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/add_account"
            android:src="@drawable/baseline_add_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppin_medium"
            android:text="@string/add_account"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/addProfile"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:background="@drawable/blue_rounded_corner"
        android:fontFamily="@font/poppin_medium"
        android:text="@string/add_account"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/llAds"
        app:layout_constraintEnd_toEndOf="parent" />

    <FrameLayout
        android:id="@+id/llAds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmer_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@drawable/bg_card_ads"
            app:shimmer_auto_start="true"
            app:shimmer_base_color="#ccc">

            <include layout="@layout/load_banner" />

        </com.facebook.shimmer.ShimmerFrameLayout>

        <FrameLayout
            android:id="@+id/ad_container"
            android:layout_width="match_parent"
            android:layout_gravity="bottom"
            android:layout_height="wrap_content" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
